--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "express-app",
+    "name": "express-boilerplate",
     "version": "1.0.0",
     "description": "This is a boilerplate for express app",
     "main": "app.js",
