--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "mongoose": "^6.8.3",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
