feat: added typescript support feat: added eslint and prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,28 +1,27 @@
 {
-    "extends": ["airbnb-base", "prettier"],
-    "parserOptions": {
-        "ecmaVersion": 12
-    },
     "env": {
-        "commonjs": true,
-        "node": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+    "overrides": [],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": ["@typescript-eslint", "prettier"],
+    "ignorePatterns": ["node_modules/", "dist/"],
     "rules": {
-        "no-console": 0,
-        "indent": 0,
-        "linebreak-style": 0,
-        "no-underscore-dangle": 0,
         "prettier/prettier": [
             "error",
             {
                 "trailingComma": "es5",
                 "singleQuote": true,
-                "printWidth": 100,
+                "printWidth": 80,
                 "tabWidth": 4,
                 "semi": true
             }
         ]
-    },
-    "plugins": ["prettier"]
+    }
 }
