--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 .env
 # .vscode
 node_modules
+
+# build files
+dist
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
