--- a/package.json
+++ b/package.json
@@ -1,33 +1,52 @@
 {
     "name": "express-boilerplate",
-    "version": "1.0.0",
-    "description": "This is a boilerplate for express app",
-    "main": "app.js",
+    "version": "2.0.0",
+    "description": "This is a boilerplate for famous Node.js framework Express.js with TypeScript and SWC. Setting up a new Express.js project with TypeScript can be a hassle. Implementing of path aliases, linting, and formatting can be time-consuming. This boilerplate is a starting point for new projects that need to be up and running quickly. It includes all the necessary configurations and tools to help you focus on writing code.",
+    "main": "server.ts",
     "scripts": {
-        "start": "node app.js",
-        "dev": "nodemon app.js"
+        "build": "tsc && pnpm lint && swc src -d dist -D --strip-leading-paths --delete-dir-on-start",
+        "start": "NODE_ENV=production node dist/server.js",
+        "dev": "nodemon",
+        "lint": "eslint --ext .ts src",
+        "lint:fix": "eslint --ext .ts src --fix"
     },
     "keywords": [
         "express",
         "app",
-        "boilerplate"
+        "boilerplate",
+        "swc",
+        "typescript",
+        "node",
+        "path-aliases",
+        "linting"
     ],
-    "author": "Shaykh Farhan",
-    "license": "ISC",
+    "author": {
+        "name": "Shaykh Farhan",
+        "url": "https://github.com/sfsajid91"
+    },
+    "license": "MIT",
     "dependencies": {
         "chalk": "4.1.2",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
+        "express": "^4.19.2",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
-        "eslint": "^7.32.0 || ^8.2.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-import": "^2.25.2",
-        "eslint-plugin-prettier": "^4.2.1",
-        "nodemon": "^2.0.22",
-        "prettier": "^2.8.0"
+        "@swc-node/register": "^1.10.9",
+        "@swc/cli": "^0.4.0",
+        "@swc/core": "^1.7.3",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/morgan": "^1.9.9",
+        "@types/node": "^22.0.0",
+        "@typescript-eslint/eslint-plugin": "^7.18.0",
+        "@typescript-eslint/parser": "^7.18.0",
+        "dotenv": "^16.4.5",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "nodemon": "^3.1.4",
+        "prettier": "^3.3.3",
+        "typescript": "^5.5.4"
     }
 }
